# cv-cli

./: .gitignore  README.md  pyproject.toml
src/cv_cli/: __init__.py  cli.py  scons_helpers.py
src/cv_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cv_cli/i18n/: ca.yaml  en.yaml  es.yaml
src/cv_cli/templates/: template-cv.tex  template-letter.tex
